# surfacemapper

./: .gitignore  README.md  pyproject.toml
results/: brandtest.json  brandtest.md  custom.json  custom.md
surfacemapper/: __init__.py  cli.py  config.py  logging_utils.py  models.py  validators.py
surfacemapper/core/: __init__.py  orchestrator.py  risk.py
surfacemapper/discovery/: __init__.py  crtsh.py  passive.py
surfacemapper/dns/: __init__.py  resolver.py
surfacemapper/probing/: __init__.py  headers.py  http_probe.py  paths.py  tech_fingerprint.py
surfacemapper/reporting/: json_report.py  markdown_report.py
surfacemapper/reporting/templates/: report.md.j2
surfacemapper/utils/: text.py  urls.py
tests/: test_cli.py  test_crtsh.py  test_headers.py  test_http_probe.py  test_reports.py  test_risk.py  test_validators.py
