[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surfacemapper"
version = "0.1.0"
description = "SurfaceMapper is a passive-first attack surface mapping CLI for authorized targets only. It excludes exploitation and active abuse features."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Open Source Contributor" }]
keywords = ["security", "attack-surface", "asset-discovery", "reconnaissance", "defensive-security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "dnspython>=2.6.1,<3.0.0",
  "httpx>=0.27.0,<1.0.0",
  "jinja2>=3.1.4,<4.0.0",
  "pydantic>=2.7.1,<3.0.0",
  "rich>=13.7.1,<14.0.0",
  "typer>=0.12.3,<1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0,<9.0.0"]

[project.urls]
Homepage = "https://github.com/example/surfacemapper"
Repository = "https://github.com/example/surfacemapper"

[project.scripts]
surfacemapper = "surfacemapper.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"surfacemapper.reporting" = ["templates/*.j2"]

[tool.setuptools.packages.find]
include = ["surfacemapper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
